# GoogleTestProject2

./: .gitignore  CMakeLists.txt  GoogleTestProject2.sln
GoogleTestProject2/: GoogleTestProject2.cpp  GoogleTestProject2.vcxproj  GoogleTestProject2.vcxproj.filters
MathTestProject/: test.cpp
MyMathLib/: MyMathLib.cpp  MyMathLib.hpp  MyMathLib.vcxproj  MyMathLib.vcxproj.filters
